--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -10,16 +10,16 @@ bind 7 					"slot7"
 bind 8 					"slot8"
 bind 9 					"slot9"
 bind a 					"+mleft"								//by ualiases.cfg
-bind b 					"mat_filtertextures 0; mat_picmip -1"
+//bind b 				""
 bind c 					"voicemenu 2 0"
 bind d 					"+mright"								//by ualiases.cfg
 bind e 					"voicemenu 0 0"
 bind f 					"prec"									//by ualiases.cfg
 bind g 					"+taunt"
 bind h 					"+use_action_slot_item"
-unbind i 
-unbind j 
-unbind k 
+//bind i 				""	
+//bind j 				""
+//bind k 				""
 bind l 					"disguiseteam"
 bind m 					"open_charinfo_direct"
 bind n 					"open_charinfo_backpack"
@@ -29,10 +29,10 @@ bind q 					"lastinv"
 bind r 					"+quickswitch"
 bind s 					"+mback"								//by ualiases.cfg
 bind t 					"say"
-unbind u 
+//bind u 				""
 bind v 					"+voicerecord"
 bind w 					"+mfwd"									//by ualiases.cfg
-unbind x
+//bind x				""
 bind y 					"say_team"
 bind z 					"+inspect"
 bind KP_END 			"voice_menu_1"
@@ -48,47 +48,47 @@ bind KP_PLUS 			"x_type_switcher"						//by ualiases.cfg
 bind KP_MINUS 			"x_color_switcher"						//by ualiases.cfg
 bind KP_MULTIPLY 		"x_size_switcher"						//by ualiases.cfg
 bind KP_SLASH 			"record temp; stop; snd_restart; hud_reloadscheme; heartbeat"
-unbind -
-unbind =
-unbind '
+//bind - 				""
+//bind = 				""
+//bind ' 				""
 bind ` 					"toggleconsole"
 bind , 					"changeclass"
 bind . 					"changeteam"
-unbind /
+//bind / 				""
 bind SPACE 				"+cjump"
 bind BACKSPACE 			"dropitem"
 bind TAB 				"+showscores"
 bind ESCAPE 			"cancelselect"
-unbind INS
-unbind END
-unbind PGUP
-unbind PGDN
+//bind INS 				""
+//bind END 				""
+//bind PGUP 			""
+//bind PGDN 			""
 bind PAUSE 				"pause"
 bind SHIFT 				"+showscores"							//"+board"
-unbind ALT 														//"+strafe"
+//bind ALT 				"+strafe"
 bind CTRL 				"+duck"
-unbind UPARROW
-unbind LEFTARROW 		"sv_cheats 1; vgui_drawtree 1"
-unbind DOWNARROW
-unbind RIGHTARROW
+//bind UPARROW 			""
+//bind LEFTARROW 		"sv_cheats 1; vgui_drawtree 1"
+//bind DOWNARROW 		""
+//bind RIGHTARROW 		""
 bind F1 				"toggle volume 0 0.05"
 bind F2 				"incrementvar volume 0 0.3 -0.01"
 bind F3 				"incrementvar volume 0 0.3 0.01"
 bind F4					"player_ready_toggle"
-unbind F5 				//"incrementvar mat_monitorgamma 1.6 2.6 0.1"
-unbind F6 				//"incrementvar mat_monitorgamma 1.6 2.6 -0.1"
+//bind F5 				"incrementvar mat_monitorgamma 1.6 2.6 0.1"
+//bind F6 				"incrementvar mat_monitorgamma 1.6 2.6 -0.1"
 bind F7 				"toggle r_drawviewmodel 0 1"
-unbind F8 				//"toggle tf_scoreboard_mouse_mode 0 1"
+//bind F8 				"toggle tf_scoreboard_mouse_mode 0 1"
 						//"toggle host_timescale 0 1 5"			
 						//"toggle hud_saytext_time 0 3"
-unbind F9 				//"toggle mp_tournament_readymode 0 1"
+//bind F9 				"toggle mp_tournament_readymode 0 1"
 bind F10 				"hud_reloadscheme"
 bind F11				"toggle cl_hud_minmode 0 1"
-unbind F12
+//bind F12 				""
 bind MOUSE1 			"+attack"
 bind MOUSE2 			"+attack2"
 bind MOUSE3 			"+attack3"
-unbind MOUSE4
+//bind MOUSE4 			""
 bind MOUSE5 			"melee"									//by ualiases.cfg
 bind MWHEELUP 			"invprev"
 bind MWHEELDOWN 		"invnext"
