--- a/cfg/userver.cfg
+++ b/cfg/userver.cfg
@@ -1,19 +1,18 @@
-// Server Control Panel (ETF2L S23) by Eniere, February 5th, 2016
+// Server Control Panel (ETF2L S24) by Eniere, Jule 9th, 2016
 // 1. Replace "*****" with your specific server data;
 // 2. Put this CFG to your custom\YOURSTUFF\cfg\ folder;
-// 3. Add "exec servercontrols" into your autoexec.cfg, then restart Team Fortress 2.
+// 3. Add "exec servercontrols" to your autoexec.cfg, then restart Team Fortress 2.
 
-alias homeserver 	""
+alias homeserver 	"toggleconsole; clear; echo "Paste the connect command here."; echo ""; "
 alias rpass		 	"toggleconsole; clear; echo "Type the next command here:"; echo ""; echo "rcon_password *****"; echo ""; echo "where '*****' - your rcon password for current server."; echo "Then you can close this window and use Control Panel buttons to manage game config and maps."; echo ""; "
 
 alias 5cpcfg 		"rcon exec etf2l_6v6_5cp.cfg"
 alias kothcfg 		"rcon exec etf2l_6v6_koth.cfg"
-alias goldencfg 	"rcon mp_timelimit 0; mp_winlimit 1"
 alias gc 			"rcon mp_timelimit 0; mp_winlimit 1"
 alias map1 			"rcon changelevel cp_badlands; 				rcon changelevel cp_badlands"
-alias map2 			"rcon changelevel cp_gullywash_final1; 		rcon changelevel cp_gullywash_final1"
+alias map2 			"rcon changelevel cp_snakewater_u8; 		rcon changelevel cp_snakewater_u8"
 alias map3 			"rcon changelevel cp_process_final; 		rcon changelevel cp_process_final"
-alias map4 			"rcon changelevel cp_snakewater_final1; 	rcon changelevel cp_snakewater_final1"
-alias map5 			"rcon changelevel cp_sunshine_rc9; 			rcon changelevel cp_sunshine_rc9"
-alias map6 			"rcon changelevel koth_product_rc8; 		rcon changelevel koth_product_rc8"
-alias map7 			"rcon changelevel cp_granary_pro_b10; 		rcon changelevel cp_granary_pro_b10"
+alias map4 			"rcon changelevel koth_product_rc8; 	rcon changelevel koth_product_rc8"
+alias map5 			"rcon changelevel cp_reckoner_b2a; 			rcon changelevel cp_reckoner_b2a"
+alias map6 			"rcon changelevel cp_gullywash_final1; 		rcon changelevel cp_gullywash_final1"
+alias map7 			"rcon changelevel cp_granary_pro_rc3; 		rcon changelevel cp_granary_pro_rc3"
