--- a/cfg/autoexec.cfg
+++ b/cfg/autoexec.cfg
@@ -1,3 +1,6 @@
+//-novid -w 1920 -h 1080 -full
+//-novid -w 1280 -h 720 -sw -noborder
+
 //exec ugraphicsdx81
 exec usettings
 exec unetwork
@@ -6,13 +9,9 @@ exec userver
 exec ualiases
 exec ubinds
 
-r_drawviewmodel 	"1"
-viewmodel_fov 		"54"
+//mm 							// Disable PREC
 
 clear
 echo ""
 echo "* Config loaded *"
 echo ""
-
-//-novid -w 1920 -h 1080 -full
-//-novid -w 1280 -h 720 -sw -noborder
