--- a/cfg/udemos.cfg
+++ b/cfg/udemos.cfg
@@ -9,9 +9,9 @@ exec ubinds
 hud_saytext_time 					"0"
 //cl_hud_playerclass_use_playermodel 	"0"
 volume 								"0.01"
-hud_damagemeter 					"0"
-hud_damagemeter_ooctimer 			"1"
-hud_damagemeter_period 				"0"
+//hud_damagemeter 					"0"
+//hud_damagemeter_ooctimer 			"1"
+//hud_damagemeter_period 				"0"
 
 bind a 								"demo_timescale 0.3"
 bind w 								"demo_timescale 1"
@@ -21,7 +21,7 @@ bind SPACE 							"demo_togglepause"
 
 clear
 echo ""
-echo "mat_queue_mode set to 1"
+//echo "mat_queue_mode set to 1"
 echo ""
 echo "------------------------------------------"
 echo "| press SPACE to pause/resume playback   |"
