--- a/cfg/usettings.cfg
+++ b/cfg/usettings.cfg
@@ -1,6 +1,32 @@
+ds_enable 									"3"				// manual=0, match=1, all=2, comp=3
+ds_dir 										"demos"
+ds_prefix 									""
+ds_sound 									"1"
+ds_log 										"1"
+ds_notify 									"0"				// console=0, con+chat=1, con+HUD=2
+ds_screens 									"1"
+ds_min_streak 								"2"				// 2-1000
+ds_kill_delay 								"15"			// 5-1000
+ds_autodelete 								"0"
+
+prec_notify 								"2"
+prec_mode 									"2"
+prec_min_streak 							"2"
+prec_kill_delay 							"15.0"
+prec_dir 									"demos"
+prec_sound 									"1"
+prec_screens 								"1"
+prec_log 									"1"
+prec_delete_useless_demo 					"0"
+prec_stv_status 							"1"
+prec_tag 									""
+prec_check_update 							"1"
+
+r_drawviewmodel 							"1"
+viewmodel_fov 								"54"
 fov_desired 								"90"
 cl_flipviewmodels 							"0"
-hud_takesshots 								"0"					//turn it on when prec is brocken again
+hud_takesshots 								"0"				// Turn on when prec is broken again
 hud_freezecamhide 							"0"
 cl_showhelp 								"0"
 cl_mouselook 								"1"
@@ -9,7 +35,7 @@ cl_notifications_show_ingame 				"0"
 cl_trading_show_requests_from 				"2"
 hud_classautokill 							"0"
 cl_spec_mode 								"5"
-cl_disablehtmlmotd 							"0"					//1
+cl_disablehtmlmotd 							"0"				// 1
 cl_autorezoom 								"1"
 tf_remember_activeweapon 					"1"
 tf_remember_lastswitched 					"1"
@@ -33,7 +59,7 @@ tf_dingaling_pitchmindmg 					"115"
 tf_dingaling_pitchmaxdmg 					"22"
 tf_dingalingaling_repeat_delay 				"0.0"
 tf_simple_disguise_menu 					"0"
-tf_spectator_target_location 				"3"					//bottom right
+tf_spectator_target_location 				"3"				// bottom right
 tf_colorblindassist 						"0"
 cl_spec_carrieditems 						"0"
 cl_use_tournament_specgui 					"1"
@@ -50,30 +76,18 @@ cl_showpluginmessages 						"1"
 cl_timeout 									"120"
 cl_allowdownload 							"1"
 cl_downloadfilter 							"mapsonly"
-prec_notify 								"2"
-prec_mode 									"2"
-prec_min_streak 							"2"
-prec_kill_delay 							"15.0"
-prec_dir 									"demos"
-prec_sound 									"1"
-prec_screens 								"1"
-prec_log 									"1"
-prec_delete_useless_demo 					"0"
-prec_stv_status 							"1"
-prec_tag 									""
-prec_check_update 							"1"
 closecaption 								"0"
 cc_predisplay_time 							"0"
 cc_linger_time 								"4"
 tf_hud_show_servertimelimit 				"1"
 hud_saytext_time 							"3"
-cl_hud_playerclass_use_playermodel 			"1"					//0
+cl_hud_playerclass_use_playermodel 			"0"				// 0
 mat_monitorgamma 							"2.0"
 dsp_enhance_stereo 							"0"
 snd_surround_speakers 						"0"
-voice_enable 								"0"
+voice_enable 								"1"
 developer 									"0"
-contimes 									"8"					//3
+contimes 									"8"				// 3
 con_enable 									"1"
 con_filter_enable 							"0"
 con_filter_text 							"1"
@@ -88,9 +102,9 @@ con_filter_text_out 						"Connection to game coordinator established"
 con_filter_text_out 						"Error: Material"
 con_filter_text_out 						"No such variable"
 con_filter_text_out 						"class C_DynamicProp"
-tf_hud_target_id_alpha 						"200"				//"100" by default
+tf_hud_target_id_alpha 						"200"			// default=100
 tf_hud_target_id_disable_floating_health 	"1"
-tf_hud_target_id_show_avatars 				"1"					//works only with enabled floating health
+tf_hud_target_id_show_avatars 				"1"				// works only when floating health enabled
 tf_scoreboard_mouse_mode 					"2"
 tf_scoreboard_ping_as_text					"1"
 tf_scoreboard_alt_class_icons				"0"
