--- a/cfg/ualiases.cfg
+++ b/cfg/ualiases.cfg
@@ -25,7 +25,7 @@ alias -cjump 			"-duck; -jump"
 
 alias melee 			"slot3"
 
-alias prec 				"prec_mark; voicemenu 2 5"
+alias prec 				"ds_mark; voicemenu 2 5"
 alias local 			"exec ulocalhost"
 alias rec 				"exec udemos"
 alias preset1 			"load_itempreset 0"
