--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -3,7 +3,7 @@ mp_timelimit 							"30"
 mp_windifference 						"5"
 mp_winlimit 							"0"
 mp_allowspectators 						"1"
-mp_disable_respawn_times 				"0"
+mp_disable_respawn_times 				"1"
 mp_forcecamera 							"1"
 mp_respawnwavetime 						"7.0"
 mp_teams_unbalance_limit 				"0"
@@ -22,14 +22,14 @@ tf_bot_keep_class_after_death 			"1"
 //mp_tournament_blueteamname				"Blue colored guys"
 tf_bot_add 1 scout red 					"RED Scout"
 tf_bot_add 1 medic red 					"RED Medic"
-tf_bot_add 1 soldier red 					"12345678901234567890"
+tf_bot_add 1 soldier red 					"RED Soldier"
 tf_bot_add 1 scout blue 				"BLU Scout"
 tf_bot_add 1 medic blue 				"BLU Medic"
-tf_bot_add 1 soldier blue 					"123456789012345678901"
+tf_bot_add 1 soldier blue 					"RED Soldier"
 //mp_tournament_readymode 				"0"
 
 //vgui_drawtree							"1"
 
-bind F9 								"toggle mp_tournament_readymode 0 1"
-bind F8 								"toggle host_timescale 1 5"
+//bind F9 								"toggle mp_tournament_readymode 0 1"
+//bind F8 								"toggle host_timescale 1 5"
 bind MOUSE3 							"noclip"
