--- a/cfg/medic.cfg
+++ b/cfg/medic.cfg
@@ -36,6 +36,6 @@ bind SHIFT 					"+shiftmask"
 //bind SPACE 					"+cjump"
 bind MOUSE1 				"+medigun"
 bind MOUSE2 				"+crossbow"
-bind MOUSE3 				"+attack3"	//"+reload"
+bind MOUSE3 				"+reload"
 bind MOUSE4 				"+charge"
 bind MOUSE5 				"+saw"
