--- a/cfg/spy.cfg
+++ b/cfg/spy.cfg
@@ -6,5 +6,8 @@ exec ubinds
 
 alias +sapper 		"build 3 0; +attack"
 alias -sapper 		"slot2; -attack"
-bind MOUSE4 		"disguise 2 -1"
-bind MOUSE5 		"+sapper"
+
+alias medcheck 		"disguise 5 -1; slot2"
+
+bind MOUSE4 		"medcheck"
+bind MOUSE5 		"lastinv"
