--- a/cfg/ubinds.cfg
+++ b/cfg/ubinds.cfg
@@ -17,7 +17,7 @@ bind e 					"voicemenu 0 0"
 bind f 					"prec"									//by ualiases.cfg
 bind g 					"+taunt"
 bind h 					"+use_action_slot_item"
-//bind i 				""	
+bind i 					"say "I know this is another game, but general, another settlement needs your help""	
 //bind j 				""
 //bind k 				""
 bind l 					"disguiseteam"
