--- a/cfg/ulocalhost.cfg
+++ b/cfg/ulocalhost.cfg
@@ -19,13 +19,13 @@ mp_friendlyfire 						"1"
 host_timescale 							"1"
 tf_bot_keep_class_after_death 			"1"
 //mp_tournament_redteamname				"Red colored guys"
-//mp_tournament_blueteamname				"Blue colored guys"
+//mp_tournament_blueteamname			"Blue colored guys"
 tf_bot_add 1 scout red 					"RED Scout"
 tf_bot_add 1 medic red 					"RED Medic"
-tf_bot_add 1 soldier red 					"RED Soldier"
+tf_bot_add 1 soldier red 				"RED Soldier"
 tf_bot_add 1 scout blue 				"BLU Scout"
 tf_bot_add 1 medic blue 				"BLU Medic"
-tf_bot_add 1 soldier blue 					"RED Soldier"
+tf_bot_add 1 soldier blue 				"BLU Soldier"
 //mp_tournament_readymode 				"0"
 
 //vgui_drawtree							"1"
